<resources>
    <string name="app_name">OdooCon2</string>
    <string name="main_menu">Main Menu</string>
    <string name="registration">Registration</string>
    <string name="discharge">Discharge</string>
    <string name="void_transaction">Void</string>
    <string name="eligibility">Eligibility</string>
    <string name="company">Company</string>
    <string name="sex">Sex</string>
    <string name="dob">Date of Birth</string>
    <string name="policy_date">Policy Date</string>
    <string name="policy_number">Policy Number</string>
    <string name="classname">Class</string>
    <string name="membership">Membership</string>
    <string name="cardNo">Card No</string>
    <string name="policyCategory">Policy Category</string>
    <string name="benefit">Benefit</string>
    <string name="confirm">Confirm</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="reverse_title">Barcode reversal</string>
    <string name="setting_password_title">Input password</string>
    <string name="additional_code_title">Input additional code</string>
    <string name="dialog_comfirm">ConFirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="save_success">Save success</string>
    <string name="password_error">Password error</string>
    <string name="operation_result">Result</string>
    <string name="operation_fail">Operation failed</string>
    <string name="error_trade_number">Trace number format error</string>
    <string name="error_addition_number">Additional code format error</string>
    <string name="error_ipaddress">IP format error</string>
    <string name="error_port">Invalid port number</string>
    <string name="print_test">Print test</string>
    <string name="qrcode_verify">Barcode verification</string>
    <string name="magnetic_card_test">Magnetic stripe card test</string>
    <string name="rfid_test">RFID test</string>
    <string name="track1">Track1</string>
    <string name="track2">Track2</string>
    <string name="track3">Track3</string>
    <string name="read_card">Swipe card</string>
    <string name="please">Please swipe card</string>
    <string name="error_security">No permission to read/write serial port</string>
    <string name="error_unknown">Could not open serial port, due to unknown error</string>
    <string name="qrcode_result">Scanning result</string>
    <string name="pcsc_test">IC card test</string>
    <string name="identity_test">ID card test</string>
    <string name="error">Error</string>
    <string name="error_unexpect">Unknown error</string>
    <string name="error_nolib">Library not found</string>
    <string name="error_open_magnetic_card">Could not open magnetic card device</string>
    <string name="printertype">Printer Type:</string>
    <string name="selectprinter">Please choose printer type</string>
    <string name="not_support">Not support multi-language printer</string>
    <string name="noPaper">No paper</string>
    <string name="ptintInit">Printer initialing... Please try again after a few seconds.</string>
    <string name="dlg_ok">Confirm</string>
    <string name="noPaperNotice">No paper, please put paper in and retry</string>
    <string name="LowBattery">Low battery, please connect the charger!</string>
    <string name="retry">Retry</string>
    <string name="overTemp">over temp !</string>
    <string name="CommonVer">Chinese-English printer</string>
    <string name="MultilingualVer">Multi-language printer</string>
    <string name="PrintTemp1">THP Temp:before print:20 degrees</string>
    <string name="PrintTemp2">THP Temp:after print:30 degrees</string>
    <string name="CharTest">ABCDEFGHIGKLMNOPQRSTUVWXYZabcdefghigklmnopqrstuvwxyz0123456789-!@#$%^&amp;*()?|\.</string>
    <string name="printer_version">Printer version：</string>
    <string name="bar_code">Barcode:</string>
    <string name="print_bar_code">Print barcode</string>
    <string name="D_bar_code">2D barcode:</string>
    <string name="print_2D_barcode">Print 2D barcode</string>
    <string name="walk_paper_lines">Walk paper lines:</string>
    <string name="walk_paper_test">Walk paper test</string>
    <string name="left_margin">Left margin:</string>
    <string name="right_margin">Right margin</string>
    <string name="row_space">Row space</string>
    <string name="font_size">Font size：</string>
    <string name="gray_level">Gray level</string>
    <string name="print_content">Print content：</string>
    <string name="chinese_example">Chinese example</string>
    <string name="english_example">English example</string>
    <string name="clear_text">Clear</string>
    <string name="print_text">Print text</string>
    <string name="printing_wait">Printing, please wait……</string>
    <string name="D_barcode_loading">2D barcode loading</string>
    <string name="generate_barcode_wait">Generating barcode, please wait……</string>
    <string name="input_print_data">Please input print data</string>
    <string name="digits_11_12">(11 digits)</string>
    <string name="maker_direction">maker direction：</string>
    <string name="maker_search_distance">(0-1)   search distance：</string>
    <string name="maker_walk_distance">walk distance：</string>
    <string name="maker_walk_distance_range">(0-255)</string>
    <string name="maker">maker</string>
    <string name="maker_error">maker input value not fit</string>
    <string name="papercut">paper cut</string>
    <string name="walk_paper_intput_value">walk paper intput value not fit</string>
    <string name="print_picture">Print picture</string>
    <string name="sure">sure</string>
    <string name="not_find_picture">not find picture</string>
    <string name="input_command">please input command</string>
    <string name="execute_command">execute command</string>
    <string name="ic_connect">Connect</string>
    <string name="ic_iccid">Get ICCID</string>
    <string name="ic_imsi">Get IMSI</string>
    <string name="idcard_czz">Proceeding...</string>
    <string name="idcard_ljdkq">Connecting to ID reader...</string>
    <string name="idcard_ljdkqcg">Connect reader success</string>
    <string name="idcard_wfljdkq">Connect reader failed</string>
    <string name="idcard_dqsbhcs">Read failed or time out</string>
    <string name="idcard_xm">Name:</string>
    <string name="idcard_xb">Gender:</string>
    <string name="idcard_mz">Nation:</string>
    <string name="idcard_csrq">Birthday:</string>
    <string name="idcard_dz">Address:</string>
    <string name="idcard_sfhm">ID：</string>
    <string name="idcard_qzjg">Issuing authority：</string>
    <string name="idcard_yxqx">"Exp date: "</string>
    <string name="idcard_hqsfzxx">Get ID card information</string>
    <string name="idcard_dkts">Please put your ID card on specific area......</string>
    <string name="idcard_zbdsfsbmk">ID identification module not found</string>
    <string name="idcard_wazsfsbmk">Setup ID identification module?</string>
    <string name="idcard_azsb">Setup failed</string>
    <string name="idcard_xzgn">Select function</string>
    <string name="idcard_xzsfsbfs">Please choose a mode for ID identification</string>
    <string name="idcard_sxtsb">Identification by camera OCR</string>
    <string name="idcard_dkqsb">"Identification by card reader"</string>
    <string name="bl_dy">Print</string>
    <string name="bl_qj">Forward</string>
    <string name="bl_ht">Backward</string>
    <string name="bl_tc">Quit</string>
    <string name="bl_xsdxx">Displayed Info:</string>
    <string name="bl_hqsfzxx">Get ID information</string>
    <string name="select_show_head_photo">whether show head photo</string>
    <string name="select_show_head_photo_true">true</string>
    <string name="select_show_head_photo_false">false</string>
    <string name="camera_open_error">Camera open error ! Please restart the machine !</string>
    <string name="camera_indicator">Please put the ID card into the frame and take the photo .</string>
    <string name="camera_take_picture_error">Take the picture fail</string>
    <string name="reco_dialog_title">Prompt</string>
    <string name="reco_dialog_blur">Recognized fail,Please put the ID card horizontal!</string>
    <string name="reco_dialog_imei">This machine is unauthorized.</string>
    <string name="reco_dialog_cdma">Please use CDMA machine</string>
    <string name="reco_dialog_time_out">Engine is out of date!!</string>
    <string name="reco_dialog_engine_init">Engine initialized fail.</string>
    <string name="reco_dialog_licens">Verify abnormal,Please check the network.</string>
    <string name="take_the_front_side">Please take the front side of ID card.</string>
    <string name="flashlight_open">Flashlight open</string>
    <string name="flashlight_close">Flashlight close</string>
    <string name="flashlight_auto">Flashlight auto</string>
    <string name="flashlight_cannot_set">Flashlight cannot be set</string>
    <string name="notsupportfocus">Not support focusing</string>
    <string name="take_front_side">Take front side</string>
    <string name="recognize">Recognize</string>
    <string name="get_barcode_fail">Failure to obtain a two-dimensional code or overtime</string>
    <string name="get_barcode_success">Get the success of the two-dimensional code</string>
    <string name="get_id_front_fail">Failure to obtain positive information card</string>
    <string name="get_id_front_success">Successfully obtain identity cards positive messages</string>
    <string name="get_id_back_fail">Negative information failed to obtain ID cards</string>
    <string name="get_id_back_success">Successfully obtain identity cards negative information</string>
    <string name="input_timeout">Enter the timeout</string>
    <string name="input_illegle">Enter illegal</string>
    <string name="identify_fail">API module is not installed, can not be two-dimensional code / ID card identification
    </string>
    <string name="none">No</string>
    <string name="dimensional_code">Dimensional code content</string>
    <string name="idCard_front_info">ID positive messages</string>
    <string name="idCard_back_info">ID negative information</string>
    <string name="pcsc_operating">Operation</string>
    <string name="pcsc_reader_not_found">Can not find IC card reader</string>
    <string name="pcsc_reader_access_limit">No IC card reader access</string>
    <string name="pcsc_reader_connect_fail">Unable to connect IC card reader</string>
    <string name="pcsc_reader_connect_success">IC card reader connected to success</string>
    <string name="pcsc_iccid_read_fail">Failed to read the ICCID</string>
    <string name="pcsc_imei_read_fail">Read IMSI failure</string>
    <string name="pcsc_smart_card_fail">Failed to test the smart card</string>
    <string name="pcsc_key_confirm">Confirm</string>
    <string name="finger_test">Fingerprint test</string>
    <string name="twoCemerna_test">Camera test</string>
    <string name="powerOn">Power on</string>
    <string name="powerOff">Power off</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="recog_type_a">recognize positive</string>
    <string name="recog_type_b">recognize negative</string>
    <string name="fignerprint_01">Pakistan Germany fingerprint (Developmenting)</string>
    <string name="fignerprint_02">Pakistan Hongkong fingerprint (Developmenting)</string>
    <string name="fignerprint_03">Domestic Hongkong fingerprint (available)</string>
    <string name="fignerprint_tips_01">Please select the fingerprint device type</string>
    <string name="fignerprint_tips_02">Developmenting</string>
    <string name="init_card">Initialize</string>
    <string name="query">Query</string>
    <string name="consume">Consume</string>
    <string name="recharge">Charge</string>
    <string name="operating">Processing</string>
    <string name="operation_succss">Operate Success</string>
    <string name="claimno">Claim No</string>
</resources>